--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -2,7 +2,7 @@
 ; Esto funciona en localhost
 ; host     = localhost
 ; user     = root
-; password = l4nuz4D4T4845E
+; password = ************
 ;
 ; Para que funcione los datos de conexión de abajo se hizo lo siguiente:
 ; 1) Conocer tu dirección IP entrando en http://whatismyipaddress.com
@@ -17,17 +17,17 @@
 ; 4) Cada vez que cambie tu IP deberás añadirlo en la opcion de cPanel
 ; 
 [database]
-host     = lanuzagroup.com:3306
-user     = lanuzag_dbUser
-password = mysqlC0ntr453ñ4*
-database = lanuzag_LanuzaGroupDB
+host     = 
+user     = 
+password = 
+database = 
 ;
 ;
 ; ..: Producción :..
 ;
-; Esto funciona en lanuzagroup.com
+; Esto funciona en 
 ; [database]
 ; host     = localhost
-; user     = lanuzag_dbUser
-; password = mysqlC0ntr453ñ4*
-; database = lanuzag_LanuzaGroupDB
+; user     = 
+; password = 
+; database = 
